add grid using css grid approach

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
-.grid {
-  display: flex;
-}
-
-.row {
+.grid-item {
   border: 1px solid black;
+  background-color: bisque;
   cursor: pointer;
 }
